--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </li>
     </div>
 
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
     
 </body>
 </html>
