--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <title>Notes App</title>
-    <!-- Font Awesome Link For Icons -->
+    <!-- Iconscout Link For Icons -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 </head>
 <body>
-    <div class="popup-box">
+
+    <div class="logo">
+        <i class="demo-icon uil-notes"></i>
+        <h1>Notes App</h1>
+    </div>
+    <div class="popup-box" id="note1">
         <div class="popup">
             <div class="content">
                 <header>
@@ -40,7 +45,7 @@
         </li>
     </div>
 
-    <script src="js/script.js"></script>
+    <script src="js/script.js" type="text/javascript"></script>
     
 </body>
 </html>
