Update HTML file

--- a/index.html
+++ b/index.html
@@ -4,16 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Editor</title>
+    <title>Photo Editor</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
 
     <!-- BoxIcon & FontAwesome Links For Icons -->
     <link rel='stylesheet' href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://ibrahimov13.github.io/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Photo Editor">
+    <meta property="og:description" content="Online Photo Editor | Edit photo quick and easy">
+    <meta property="og:image" content="img/Photo editor app.png">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="ibrahimov13.github.io">
+    <meta property="twitter:url" content="https://ibrahimov13.github.io/">
+    <meta name="twitter:title" content="Photo Editor">
+    <meta name="twitter:description" content="Online Photo Editor | Edit photo quick and easy">
+    <meta name="twitter:image" content="img/Photo editor app.png">
+
 </head>
 <body>
     <div class="container disable">
-        <h2>Easy Image Editor</h2>
+        <h2>Easy Photo Editor</h2>
         <div class="wrapper">
             <div class="editor-panel">
                 <div class="filter">
