Update HTML file

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Photo Editor">
     <meta property="og:description" content="Online Photo Editor | Edit photo quick and easy">
-    <meta property="og:image" content="img/Photo editor app.png">
+    <meta property="og:image" content="https://ibrahimov13.github.io/img/image-placeholder.svg">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
@@ -25,7 +25,7 @@
     <meta property="twitter:url" content="https://ibrahimov13.github.io/">
     <meta name="twitter:title" content="Photo Editor">
     <meta name="twitter:description" content="Online Photo Editor | Edit photo quick and easy">
-    <meta name="twitter:image" content="img/Photo editor app.png">
+    <meta name="twitter:image" content="https://ibrahimov13.github.io/img/image-placeholder.svg">
 
 </head>
 <body>
