--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Photo Editor">
     <meta property="og:description" content="Online Photo Editor | Edit photo quick and easy">
-    <meta property="og:image:secure_url" content="https://ibrahimov13.github.io/img/image-placeholder.svg">
     <meta property="og:image" content="https://ibrahimov13.github.io/img/image-placeholder.svg">
+    <meta property="og:image:secure_url" content="https://ibrahimov13.github.io/img/image-placeholder.svg">
+    <meta property="og:image:type" content="image/svg" /> 
+    <meta property="og:image:width" content="400" /> 
+    <meta property="og:image:height" content="300" />
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
