Update HTML file

--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Photo Editor</title>
+    <meta name="title" content="Photo Editor">
+    <meta name="description" content="Online Photo Editor | Edit photo quick and easy">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/x-icon" href="img/favicon.ico">
 
     <!-- BoxIcon & FontAwesome Links For Icons -->
     <link rel='stylesheet' href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+
+    <!-- for Microsoft apps -->
+    <meta name="msapplication-TitleImage" content="https://ibrahimov13.github.io/img/image-placeholder.svg">
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://ibrahimov13.github.io/">
