Update HTML file

--- a/index.html
+++ b/index.html
@@ -4,39 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Primary Meta Tags -->
     <title>Photo Editor</title>
     <meta name="title" content="Photo Editor">
     <meta name="description" content="Online Photo Editor | Edit photo quick and easy">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://ibrahimov13.github.io/">
+    <meta property="og:title" content="Photo Editor">
+    <meta property="og:description" content="Online Photo Editor | Edit photo quick and easy">
+    <meta property="og:image" content="https://ibrahimov13.github.io/img/image-placeholder.svg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="ibrahimov13.github.io">
+    <meta property="twitter:url" content="https://ibrahimov13.github.io/">
+    <meta property="twitter:title" content="Photo Editor">
+    <meta property="twitter:description" content="Online Photo Editor | Edit photo quick and easy">
+    <meta property="twitter:image" content="https://ibrahimov13.github.io/img/image-placeholder.svg">
+
+    <!-- CSS stylesheet -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/x-icon" href="img/favicon.ico">
-
+    
     <!-- BoxIcon & FontAwesome Links For Icons -->
     <link rel='stylesheet' href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
-    <!-- for Microsoft apps -->
-    <meta name="msapplication-TitleImage" content="https://ibrahimov13.github.io/img/image-placeholder.svg">
-
-    <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="https://ibrahimov13.github.io/">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="Photo Editor">
-    <meta property="og:description" content="Online Photo Editor | Edit photo quick and easy">
-    <meta property="og:image:secure_url" content="https://ibrahimov13.github.io/img/image-placeholder.svg">
-    <meta property="og:image" content="https://ibrahimov13.github.io/img/image-placeholder.svg">
-    <meta property="og:image:type" content="image/svg" /> 
-    <meta property="og:image:width" content="400" /> 
-    <meta property="og:image:height" content="300" />
-
-    <!-- Twitter Meta Tags -->
-    <!--
-    <meta name="twitter:card" content="summary_large_image">
-    <meta property="twitter:domain" content="ibrahimov13.github.io">
-    <meta property="twitter:url" content="https://ibrahimov13.github.io/">
-    <meta name="twitter:title" content="Photo Editor">
-    <meta name="twitter:description" content="Online Photo Editor | Edit photo quick and easy">
-    <meta name="twitter:image" content="https://ibrahimov13.github.io/img/image-placeholder.svg">
--->
 </head>
 <body>
     <div class="container disable">
