Update HTML file

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:url" content="https://ibrahimov13.github.io/">
     <meta property="og:title" content="Photo Editor">
     <meta property="og:description" content="Online Photo Editor | Edit photo quick and easy">
-    <meta property="og:image" content="https://ibrahimov13.github.io/img/image-placeholder.svg">
+    <meta property="og:image" content="https://files-iboshop.netlify.app/photo%20editor%20app/files/img/Photo%20editor%20app.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -23,7 +23,7 @@
     <meta property="twitter:url" content="https://ibrahimov13.github.io/">
     <meta property="twitter:title" content="Photo Editor">
     <meta property="twitter:description" content="Online Photo Editor | Edit photo quick and easy">
-    <meta property="twitter:image" content="https://ibrahimov13.github.io/img/image-placeholder.svg">
+    <meta property="twitter:image" content="https://files-iboshop.netlify.app/photo%20editor%20app/files/img/Photo%20editor%20app.png">
 
     <!-- CSS stylesheet -->
     <link rel="stylesheet" href="css/style.css">
