--- a/index.html
+++ b/index.html
@@ -4,27 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Todo List App</title>
+    <title>Save Text As File</title>
     <link rel="stylesheet" href="css/style.css">
-    <!-- Iconscout Link For Icons -->
-    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+    <script src="js/script.js" defer></script>
 </head>
 <body>
-    <div class="container">
-        <div class="task-input">
-            <img src="img/bars-icon.svg" alt="" width="25">
-            <input type="text" placeholder="Add a new task">
-        </div>
-        <div class="controls">
-            <div class="filters">
-                <span id="all" class="active">All</span>
-                <span id="pending">Pending</span>
-                <span id="completed">Completed</span>
+    <div class="wrapper">
+        <textarea required placeholder="Enter something to save"></textarea>
+        <div class="file-options">
+            <div class="option file-name">
+                <label>File name</label>
+                <input type="text" placeholder="Enter file name">
             </div>
-            <button class="clear-btn">Clear All</button>
+            <div class="option save-as">
+                <label>Save as</label>
+                <div class="select-menu">
+                    <select>
+                        <option value="text/plain">Text File (.txt)</option>
+                        <option value="text/javascript">JS File (.js)</option>
+                        <option value="text/html">HTML File (.html)</option>
+                        <option value="image/svg+xml">SVG File (.svg)</option>
+                        <option value="application/msword">Doc File (.doc)</option>
+                        <option value="application/vnd.ms-powerpoint">PPT File (.ppt)</option>
+                    </select>
+                </div>
+            </div>
         </div>
-        <ul class="task-box"></ul>
+        <button class="save-btn">Save As Text File</button>
     </div>
-    <script src="js/script.js" type="text/javascript"></script>
 </body>
 </html>
